[package]
name = "axes_toggle"
version = "1.0.0"
authors = ["ThatNintendoNerd <>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
